--- a/meditation-app/index.html
+++ b/meditation-app/index.html
@@ -15,28 +15,23 @@
 
 <body>
 
-  <div id="movie" class="bg_movie">
+  <div id="bgMovie" class="bg_movie">
     <video src="./video/beach.mp4" autoplay muted loop></video>
   </div>
 
-  <div id="setTimer" class="timer_btn">
+  <div id="setTimer" class="set_timer">
     <button id="min2">2min</button>
     <button id="min5">5min</button>
     <button id="min10">10min</button>
   </div>
 
-  <div id="timerCount"></div>
+  <div id="timerAnimation" class="timer_animation"></div>
+  <div id="countDown" class="countdown"></div>
 
-  <div id="mode" class="mode_icon">
-    
+  <div id="modeIcon" class="mode_icon">
+    <img src="./svg/beach.svg" alt="">
+    <img src="./svg/rain.svg" alt="">
   </div>
-
-
-
-
-
-
-
 
   <script src="app.js"></script>
 </body>
