--- a/meditation-app/index.html
+++ b/meditation-app/index.html
@@ -14,25 +14,27 @@
 </head>
 
 <body>
+  <main>
+    <div id="bgMovie" class="bg_movie">
+      <video src="./video/beach.mp4" autoplay muted loop></video>
+    </div>
 
-  <div id="bgMovie" class="bg_movie">
-    <video src="./video/beach.mp4" autoplay muted loop></video>
-  </div>
+    <div id="setTimer" class="set_timer wrapper">
+      <button id="min2">2min</button>
+      <button id="min5">5min</button>
+      <button id="min10">10min</button>
+    </div>
 
-  <div id="setTimer" class="set_timer">
-    <button id="min2">2min</button>
-    <button id="min5">5min</button>
-    <button id="min10">10min</button>
-  </div>
+    <section id="timer" class="wrapper">
+      <div id="timerAnimation" class="timer_animation"></div>
+      <div id="countDown" class="countdown"></div>
+    </section>
 
-  <div id="timerAnimation" class="timer_animation"></div>
-  <div id="countDown" class="countdown"></div>
-
-  <div id="modeIcon" class="mode_icon">
-    <img src="./svg/beach.svg" alt="">
-    <img src="./svg/rain.svg" alt="">
-  </div>
-
+    <div id="modeIcon" class="mode_icon wrapper">
+      <img src="./svg/beach.svg" alt="">
+      <img src="./svg/rain.svg" alt="">
+    </div>
+  </main>
   <script src="app.js"></script>
 </body>
 
