--- a/meditation-app/index.html
+++ b/meditation-app/index.html
@@ -25,14 +25,21 @@
       <button id="min10">10min</button>
     </div>
 
-    <section id="timer" class="wrapper">
+    <section id="player" class="player_container wrapper">
+      <audio src="./sounds/beach.mp3" id="sound" class="sound"></audio>
       <div id="timerAnimation" class="timer_animation"></div>
-      <div id="countDown" class="countdown"></div>
+      <img src="./svg/moving-outline.svg" id="movingLine" class="moving_line" alt="">
+      <img src="./svg/track-outline.svg" id="trackLine" class="track_line" alt="">
+      <img src="./svg/play.svg" alt="" id="playBtn" class="play">
+      <img src="./svg/replay.svg" alt="" id="replayBtn" class="replay">
+      <img src="./svg/pause.svg" alt="" id="pauseBtn" class="pause">
+      
+      <h3 id="countDown" class="count_down"></h3>
     </section>
 
-    <div id="modeIcon" class="mode_icon wrapper">
-      <img src="./svg/beach.svg" alt="">
-      <img src="./svg/rain.svg" alt="">
+    <div id="soundPicker" class="sound_picker wrapper">
+      <img class="beach icon" src="./svg/beach.svg" alt="">
+      <img class="rain icon" src="./svg/rain.svg" alt="">
     </div>
   </main>
   <script src="app.js"></script>
