--- a/meditation-app/index.html
+++ b/meditation-app/index.html
@@ -16,7 +16,8 @@
 <body>
   <main>
     <div id="bgMovie" class="bg_movie">
-      <video src="./video/beach.mp4" autoplay muted loop></video>
+      <video src="./video/beach.mp4" loop></video>
+      <source src="./video/rain.mp4" loop>
     </div>
 
     <div id="setTimer" class="set_timer wrapper">
@@ -33,7 +34,7 @@
       <img src="./svg/play.svg" alt="" id="playBtn" class="play">
       <img src="./svg/replay.svg" alt="" id="replayBtn" class="replay">
       <img src="./svg/pause.svg" alt="" id="pauseBtn" class="pause">
-      
+
       <h3 id="countDown" class="count_down"></h3>
     </section>
 
