--- a/Todo/index.html
+++ b/Todo/index.html
@@ -13,8 +13,8 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 
-<body class="bg-dark text-white">
-    <div class="container w-50">
+<body class="bg-light">
+    <div class="container w-75">
         <h1 class="text-center text-info my-4">ToDoリスト</h1>
         <form id="form" class="mb-4">
             <input type="text" id="input" class="border form-control" autocomplete="off" placeholder="ToDoを入力">
