--- a/testweb/index.html
+++ b/testweb/index.html
@@ -30,7 +30,7 @@
     </header>
     <main>
         <section class="hero">
-            <img src="./img/mainvisual.jpg" alt="">
+            <img src="./img/hero.jpg" alt="">
         </section><!-- hero -->
         <section class="news">
             <div class="wrapper">
@@ -40,25 +40,31 @@
             </div>
             <ul class="news_content">
                 <li>
-                    <p class="date">2021.01.01</p>
-                    <p class="tag">NEWS</p>
+                    <div class="date_wrap">
+                        <p class="date">2021.01.01</p>
+                        <p class="tag">NEWS</p>
+                    </div>
                     <p>タイトルタイトルタイトルタイトルタイトル</p>
                 </li>
                 <li>
-                    <p class="date">2021.01.01</p>
-                    <p class="tag">NEWS</p>
+                    <div class="date_wrap">
+                        <p class="date">2021.01.01</p>
+                        <p class="tag">NEWS</p>
+                    </div>
                     <p>タイトルタイトルタイトルタイトルタイトル</p>
                 </li>
                 <li>
-                    <p class="date">2021.01.01</p>
-                    <p class="tag">NEWS</p>
+                    <div class="date_wrap">
+                        <p class="date">2021.01.01</p>
+                        <p class="tag">NEWS</p>
+                    </div>
                     <p>タイトルタイトルタイトルタイトルタイトル</p>
                 </li>
             </ul>
         </section> <!-- news -->
         <section class="about">
+            <img src="./img/about.jpg" alt="">
             <div class="wrapper">
-                <img src="./img/about.jpg" alt="">
                 <h1 class="title">ABOUT</h1>
                 <p>私たちについて</p>
                 <hr>
@@ -81,24 +87,24 @@
                     </div>
                     <div class="tile2">
                         <p>- インターネットメディア事業</p>
-                        <img src="./img/business1.jpg" alt="">
+                        <img src="./img/business2.jpg" alt="">
                     </div>
                 </div>
                 <div class="tile_left">
                     <div class="tile3">
                         <p>- プロモーション企画・制作</p>
-                        <img src="./img/business1.jpg" alt="">
+                        <img src="./img/business3.jpg" alt="">
                     </div>
                     <div class="tile4">
                         <p>- ソーシャル企画・運営</p>
-                        <img src="./img/business1.jpg" alt="">
+                        <img src="./img/business4.jpg" alt="">
                     </div>
                 </div>
             </div>
         </section><!-- business -->
         <section class="company">
+            <img src="./img/company.jpg" alt="">
             <div class="wrapper">
-                <img src="./img/company.jpg" alt="">
                 <h1 class="title">COMPANY</h1>
                 <p>会社概要</p>
                 <hr>
