--- a/ShiftCreat/index.html
+++ b/ShiftCreat/index.html
@@ -121,20 +121,20 @@
           ><i class="fas fa-chevron-left"></i
         ></a>
       </div>
-      <button id="creatBtn" class="creat_shift_btn" type="submit">
+      <button id="createBtn" class="create_shift_btn" type="submit">
         シフト希望を提出する
       </button>
       <div class="history_container">
-        <h2 class="history_title">閲覧履歴</h2>
-        <ul class="event_list_li"> <!-- ここに送信したシフト希望の履歴 -->
-            <li>（仮）</li>
-        </ul>
+        <h2 class="history_title">日付入力したらここにリスト表示。隣に時間指定するボタン</h2>
+        <table id="shiftSelect" class="shift_select">
+        </table>
       </div>
-      <a href="" class="history_all"></a> <!-- 自分の送信したシフト希望の全履歴 -->
+      <a href="" class="history_all"></a>
+      <!-- 自分の送信したシフト希望の全履歴 -->
     </main>
 
     <footer>
-        <p class="footer_title">シフト作成くん（仮）</p>
+      <p class="footer_title">シフト作成くん（仮）</p>
     </footer>
 
     <script src="./index.js"></script>
