--- a/ShiftCreat/index.html
+++ b/ShiftCreat/index.html
@@ -41,7 +41,7 @@
 
       <div class="calendar_container">
         <h2 id="yearAndMonth"></h2>
-        <table id="calendar">
+        <table id="calendar" class="calendar">
           <tbody>
             <tr>
               <th class="week"></th>
@@ -126,8 +126,11 @@
       </button>
       <div class="history_container">
         <h2 class="history_title">日付入力したらここにリスト表示。隣に時間指定するボタン</h2>
+        <form>
         <table id="shiftSelect" class="shift_select">
+        
         </table>
+      </form>
       </div>
       <a href="" class="history_all"></a>
       <!-- 自分の送信したシフト希望の全履歴 -->
