--- a/ShiftCreat/index.html
+++ b/ShiftCreat/index.html
@@ -20,6 +20,7 @@
     </header>
 
     <main>
+<!--       
       <div class="select_container">
         <h3 class="select_title">候補日程</h3>
         <p class="select_memo">
@@ -37,7 +38,7 @@
           rows="10"
           placeholder="候補の区切りは改行で判断されます。また、カレンダーの日付をクリックすると日付が入力されます。"
         ></textarea>
-      </div>
+      </div> -->
 
       <div class="calendar_container">
         <h2 id="yearAndMonth"></h2>
@@ -121,18 +122,21 @@
           ><i class="fas fa-chevron-left"></i
         ></a>
       </div>
+      <section class="shift_detail">
+        <h2 class="history_title">候補日程</h2>
+          <table id="shiftSelect" class="shift_select">
+          </table>
+      </div>
+      <p>氏名</p>
+      <input type="text" placeholder="氏名">
+      <p>コメント</p>
+      <input type="textarea" placeholder="出勤希望日など特記事項">
       <button id="createBtn" class="create_shift_btn" type="submit">
         シフト希望を提出する
       </button>
-      <div class="history_container">
-        <h2 class="history_title">日付入力したらここにリスト表示。隣に時間指定するボタン</h2>
-        <form>
-        <table id="shiftSelect" class="shift_select">
-        
-        </table>
-      </form>
-      </div>
-      <a href="" class="history_all"></a>
+    </section>
+    <div class="history_container">
+    <a href="" class="history_all"></a>
       <!-- 自分の送信したシフト希望の全履歴 -->
     </main>
 
