ラジオボタンがアクティブになったらchecked=trueをつけたい

--- a/ShiftCreat/index.html
+++ b/ShiftCreat/index.html
@@ -141,7 +141,7 @@
     </main>
 
     <footer>
-      <p class="footer_title">シフト作成くん（仮）</p>
+      <p class="footer_title">てすてす</p>
     </footer>
 
     <script src="./index.js"></script>
