--- a/ShiftCreat/index.html
+++ b/ShiftCreat/index.html
@@ -20,25 +20,6 @@
     </header>
 
     <main>
-<!--       
-      <div class="select_container">
-        <h3 class="select_title">候補日程</h3>
-        <p class="select_memo">
-          ※候補日程/時間帯を入力してください。<br />
-          候補の区切りは改行で判断されます。
-        </p>
-        <p class="select_example">
-          例:<br />
-          6/15(木)Allday<br />
-          6/16(金)AM<br />
-          6/17(土)PM<br />
-        </p>
-        <textarea
-          id="dateSelect"
-          rows="10"
-          placeholder="候補の区切りは改行で判断されます。また、カレンダーの日付をクリックすると日付が入力されます。"
-        ></textarea>
-      </div> -->
 
       <div class="calendar_container">
         <h2 id="yearAndMonth"></h2>
@@ -109,39 +90,22 @@
             </tr>
           </tbody>
         </table>
-        <a
-          href=""
-          id="nextBtn"
-          class="next btn btn--circle btn--circle-c btn--shadow"
-          ><i class="fas fa-chevron-right"></i
-        ></a>
-        <a
-          href=""
-          id="prevBtn"
-          class="prev btn btn--circle btn--circle-c btn--shadow hide"
-          ><i class="fas fa-chevron-left"></i
-        ></a>
+        <a href="" id="nextBtn" class="next btn btn--circle btn--circle-c btn--shadow"><i class="fas fa-chevron-right"></i></a>
+        <a href="" id="prevBtn" class="prev btn btn--circle btn--circle-c btn--shadow hide"><i class="fas fa-chevron-left"></i></a>
       </div>
-      <section class="shift_detail">
-        <h2 class="history_title">候補日程</h2>
-          <table id="shiftSelect" class="shift_select">
-          </table>
+      <div id="shiftCreate" class="shift_create">
+        <a href="" id="shiftUrlBtn" class="shift_issue_btn"><span>◯月分のシフトを作成する。</span></a>
       </div>
-      <p>氏名</p>
-      <input type="text" placeholder="氏名">
-      <p>コメント</p>
-      <input type="textarea" placeholder="出勤希望日など特記事項">
-      <button id="createBtn" class="create_shift_btn" type="submit">
-        シフト希望を提出する
-      </button>
-    </section>
+
+
     <div class="history_container">
-    <a href="" class="history_all"></a>
+    <p class="history_all">このブラウザで作成したシフト一覧</p>
       <!-- 自分の送信したシフト希望の全履歴 -->
+    </div>
     </main>
 
     <footer>
-      <p class="footer_title">てすてす</p>
+      <p class="footer_title">しふと作成くん（仮）</p>
     </footer>
 
     <script src="./index.js"></script>
