--- a/ShiftCreat/input.html
+++ b/ShiftCreat/input.html
@@ -122,7 +122,7 @@
     </main>
 
     <footer>
-      <p class="footer_title">てすてす</p>
+      <p class="footer_title">しふと作成くん（仮）</p>
     </footer>
 
     <script src="./index.js"></script>
