--- a/ShiftCreat/index.html
+++ b/ShiftCreat/index.html
@@ -20,7 +20,6 @@
     </header>
 
     <main>
-
       <div class="calendar_container">
         <h2 id="yearAndMonth"></h2>
         <table id="calendar" class="calendar">
@@ -90,18 +89,31 @@
             </tr>
           </tbody>
         </table>
-        <a href="" id="nextBtn" class="next btn btn--circle btn--circle-c btn--shadow"><i class="fas fa-chevron-right"></i></a>
-        <a href="" id="prevBtn" class="prev btn btn--circle btn--circle-c btn--shadow hide"><i class="fas fa-chevron-left"></i></a>
+        <a
+          href=""
+          id="nextBtn"
+          class="next btn btn--circle btn--circle-c btn--shadow"
+          ><i class="fas fa-chevron-right"></i
+        ></a>
+        <a
+          href=""
+          id="prevBtn"
+          class="prev btn btn--circle btn--circle-c btn--shadow hide"
+          ><i class="fas fa-chevron-left"></i
+        ></a>
       </div>
       <div id="shiftCreate" class="shift_create">
-        <a href="" id="shiftUrlBtn" class="shift_issue_btn"><span>◯月分のシフトを作成する。</span></a>
+        <h2>
+          <a href="" id="shiftUrlBtn" class="shift_issue_btn"
+            ><span>◯月分のシフトを作成する。</span></a
+          >
+        </h2>
       </div>
 
-
-    <div class="history_container">
-    <p class="history_all">このブラウザで作成したシフト一覧</p>
-      <!-- 自分の送信したシフト希望の全履歴 -->
-    </div>
+      <div class="history_container">
+        <p class="history_all">このブラウザで作成したシフト一覧</p>
+        <!-- 自分の送信したシフト希望の全履歴 -->
+      </div>
     </main>
 
     <footer>
