--- a/ShiftCreat/input.html
+++ b/ShiftCreat/input.html
@@ -21,99 +21,173 @@
 
     <main>
 
-      <div class="calendar_container">
-        <h2 id="yearAndMonth"></h2>
-        <table id="calendar" class="calendar">
+      <div class="">
+        <h2 id="">◯月分シフト</h2>
+        <table id="" class="">
           <tbody>
             <tr>
-              <th class="week"></th>
-              <th class="week"></th>
-              <th class="week"></th>
-              <th class="week"></th>
-              <th class="week"></th>
-              <th class="week"></th>
-              <th class="week"></th>
+              <th></th>
+              <th>なまえ</th>
+              <th>なまえ</th>
+              <th>なまえ</th>
+              <th>なまえ</th>
+              <th>なまえ</th>
+              <th>なまえ</th>
             </tr>
             <tr>
-              <td id="dateText"></td>
-              <td id="dateText"></td>
-              <td id="dateText"></td>
-              <td id="dateText"></td>
-              <td id="dateText"></td>
-              <td id="dateText"></td>
-              <td id="dateText"></td>
+              <th class="">6/16</th>
+              <td id="">□</td>
+              <td id="">□</td>
+              <td id="">□</td>
+              <td id="">□</td>
+              <td id="">□</td>
+              <td id="">□</td>
             </tr>
             <tr>
-              <td id="dateText"></td>
-              <td id="dateText"></td>
-              <td id="dateText"></td>
-              <td id="dateText"></td>
-              <td id="dateText"></td>
-              <td id="dateText"></td>
-              <td id="dateText"></td>
+              <th class="">6/17</th>
+              <td id="">□</td>
+              <td id="">■</td>
+              <td id="">□</td>
+              <td id="">□</td>
+              <td id="">□</td>
+              <td id="">□</td>
             </tr>
             <tr>
-              <td id="dateText"></td>
-              <td id="dateText"></td>
-              <td id="dateText"></td>
-              <td id="dateText"></td>
-              <td id="dateText"></td>
-              <td id="dateText"></td>
-              <td id="dateText"></td>
+              <th class="">6/18</th>
+              <td id="">□</td>
+              <td id="">□</td>
+              <td id="">□</td>
+              <td id="">■</td>
+              <td id="">□</td>
+              <td id="">□</td>
             </tr>
             <tr>
-              <td id="dateText"></td>
-              <td id="dateText"></td>
-              <td id="dateText"></td>
-              <td id="dateText"></td>
-              <td id="dateText"></td>
-              <td id="dateText"></td>
-              <td id="dateText"></td>
+              <th class="">6/19</th>
+              <td id="">□</td>
+              <td id="">□</td>
+              <td id="">□</td>
+              <td id="">□</td>
+              <td id="">■</td>
+              <td id="">□</td>
             </tr>
             <tr>
-              <td id="dateText"></td>
-              <td id="dateText"></td>
-              <td id="dateText"></td>
-              <td id="dateText"></td>
-              <td id="dateText"></td>
-              <td id="dateText"></td>
-              <td id="dateText"></td>
-            </tr>
-            <tr>
-              <td id="dateText"></td>
-              <td id="dateText"></td>
-              <td id="dateText"></td>
-              <td id="dateText"></td>
-              <td id="dateText"></td>
-              <td id="dateText"></td>
-              <td id="dateText"></td>
+              <th class="">6/20</th>
+              <td id="">■</td>
+              <td id="">□</td>
+              <td id="">□</td>
+              <td id="">□</td>
+              <td id="">□</td>
+              <td id="">□</td>
             </tr>
           </tbody>
         </table>
-        <a
-          href=""
-          id="nextBtn"
-          class="next btn btn--circle btn--circle-c btn--shadow"
-          ><i class="fas fa-chevron-right"></i
-        ></a>
-        <a
-          href=""
-          id="prevBtn"
-          class="prev btn btn--circle btn--circle-c btn--shadow hide"
-          ><i class="fas fa-chevron-left"></i
-        ></a>
       </div>
-      <section class="shift_detail">
-        <h2 class="history_title">候補日程</h2>
-          <table id="shiftSelect" class="shift_select">
+
+      <button id="inputShiftBtn" class="input_shift_btn">シフトを入力する</button>
+<div id="hidden">
+        <div class="calendar_container">
+          <h2 id="yearAndMonth"></h2>
+          <table id="calendar" class="calendar">
+            <tbody>
+              <tr>
+                <th class="week"></th>
+                <th class="week"></th>
+                <th class="week"></th>
+                <th class="week"></th>
+                <th class="week"></th>
+                <th class="week"></th>
+                <th class="week"></th>
+              </tr>
+              <tr>
+                <td id="dateText"></td>
+                <td id="dateText"></td>
+                <td id="dateText"></td>
+                <td id="dateText"></td>
+                <td id="dateText"></td>
+                <td id="dateText"></td>
+                <td id="dateText"></td>
+              </tr>
+              <tr>
+                <td id="dateText"></td>
+                <td id="dateText"></td>
+                <td id="dateText"></td>
+                <td id="dateText"></td>
+                <td id="dateText"></td>
+                <td id="dateText"></td>
+                <td id="dateText"></td>
+              </tr>
+              <tr>
+                <td id="dateText"></td>
+                <td id="dateText"></td>
+                <td id="dateText"></td>
+                <td id="dateText"></td>
+                <td id="dateText"></td>
+                <td id="dateText"></td>
+                <td id="dateText"></td>
+              </tr>
+              <tr>
+                <td id="dateText"></td>
+                <td id="dateText"></td>
+                <td id="dateText"></td>
+                <td id="dateText"></td>
+                <td id="dateText"></td>
+                <td id="dateText"></td>
+                <td id="dateText"></td>
+              </tr>
+              <tr>
+                <td id="dateText"></td>
+                <td id="dateText"></td>
+                <td id="dateText"></td>
+                <td id="dateText"></td>
+                <td id="dateText"></td>
+                <td id="dateText"></td>
+                <td id="dateText"></td>
+              </tr>
+              <tr>
+                <td id="dateText"></td>
+                <td id="dateText"></td>
+                <td id="dateText"></td>
+                <td id="dateText"></td>
+                <td id="dateText"></td>
+                <td id="dateText"></td>
+                <td id="dateText"></td>
+              </tr>
+            </tbody>
           </table>
-      </div>
-      <p>氏名</p>
-      <input type="text" placeholder="氏名">
-      <p>コメント</p>
-      <input type="textarea" placeholder="出勤希望日など特記事項">
+          <a
+            href=""
+            id="nextBtn"
+            class="next btn btn--circle btn--circle-c btn--shadow"
+            ><i class="fas fa-chevron-right"></i
+          ></a>
+          <a
+            href=""
+            id="prevBtn"
+            class="prev btn btn--circle btn--circle-c btn--shadow hide"
+            ><i class="fas fa-chevron-left"></i
+          ></a>
+        </div>
+  
+  
+        <section class="shift_detail">
+          <h2 class="history_title">候補日程</h2>
+            <table id="shiftSelect" class="shift_select">
+            </table>
+        </div>
+        <p>氏名</p>
+        <input type="text" placeholder="氏名">
+        <p>コメント</p>
+        <input type="textarea" placeholder="出勤希望日など特記事項">
+        <button id="submissionBtn" class="submission_shift_btn" type="submit">シフトを提出</button>
+</div>
+      <h2>条件設定</h2>
+      <ul>
+        <li>曜日ごとの人員数</li>
+        <li>休日数</li>
+        <li>出勤確定日</li>
+      </ul>
       <button id="createBtn" class="create_shift_btn" type="submit">
-        シフト希望を提出する
+        <a href="./create.html">シフトを作成する</a>
       </button>
     </section>
     <div class="history_container">
