--- a/ShiftCreat/issue.html
+++ b/ShiftCreat/issue.html
@@ -20,7 +20,7 @@
       <h2 class="title">URL発行</h2>
       <hr> <!-- hrのままで行くかborderにするか -->
       <div class="url_issue_comment" id="urlIssueComment">◯月分のシフト入力用ページが作成されました。</div>
-      <a href="" id="createUrl" class="create_url">https://sdasdadadsada</a>
+      <a href="./input.html" id="createUrl" class="create_url">https://sdasdadadsada</a>
       <p>上記URLをクリックするとシフト管理画面へ進みます。</p>
       <div class="history_container">
       <a href="" class="history_all"></a>
