--- a/ShiftCreat/index.html
+++ b/ShiftCreat/index.html
@@ -20,7 +20,7 @@
     </header>
 
     <main>
-      <div class="calendar_container">
+      <!-- <div class="calendar_container">
         <h2 id="yearAndMonth"></h2>
         <table id="calendar" class="calendar">
           <tbody>
@@ -101,10 +101,10 @@
           class="prev btn btn--circle btn--circle-c btn--shadow hide"
           ><i class="fas fa-chevron-left"></i
         ></a>
-      </div>
+      </div> -->
       <div id="shiftCreate" class="shift_create">
         <h2>
-          <a href="" id="shiftUrlBtn" class="shift_issue_btn"
+          <a href="./issue.html" id="shiftUrlBtn" class="shift_issue_btn"
             ><span>◯月分のシフトを作成する。</span></a
           >
         </h2>
