--- a/calendar/index.html
+++ b/calendar/index.html
@@ -3,15 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>シフト作成くん</title>
+    <title>シフト提出用カレンダー</title>
     <!-- CSS -->
     <!-- <link rel="stylesheet" href="./destyle.css"> -->
     <link rel="stylesheet" href="style.css" />
     <!-- Font Awesome -->
-    <link
-      href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
-      rel="stylesheet"
-    />
+    <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet" />
   </head>
 
   <body>
@@ -89,27 +86,14 @@
             </tr>
           </tbody>
         </table>
-        <a
-          href=""
-          id="nextBtn"
-          class="next btn btn--circle btn--circle-c btn--shadow"
-          ><i class="fas fa-chevron-right"></i
-        ></a>
-        <a
-          href=""
-          id="prevBtn"
-          class="prev btn btn--circle btn--circle-c btn--shadow hide"
-          ><i class="fas fa-chevron-left"></i
-        ></a>
+        <a href="" id="nextBtn" class="next btn btn--circle btn--circle-c btn--shadow"><i class="fas fa-chevron-right"></i></a>
+        <a href="" id="prevBtn" class="prev btn btn--circle btn--circle-c btn--shadow hide"><i class="fas fa-chevron-left"></i></a>
       </div>
-
-
 
       <section class="shift_detail">
         <h2 class="history_title">クリックした日付表示</h2>
-          <table id="shiftSelect" class="shift_select">
-          </table>
-      </div>
+        <table id="shiftSelect" class="shift_select"></table>
+      </section>
     </main>
 
     <footer>
